--- a/assets/fine-uploader/fine-uploader.css
+++ b/assets/fine-uploader/fine-uploader.css
@@ -1,15 +1,15 @@
 /*!
 * Fine Uploader
 *
-* Copyright 2015, Widen Enterprises, Inc. info@fineuploader.com
+* Copyright 2013-present, Widen Enterprises, Inc.
 *
-* Version: 5.6.0
+* Version: 5.10.0
 *
 * Homepage: http://fineuploader.com
 *
 * Repository: git://github.com/FineUploader/fine-uploader.git
 *
-* Licensed only under the Widen Commercial License (http://fineuploader.com/licensing).
+* Licensed only under the MIT license (http://fineuploader.com/licensing).
 */ 
 
 
@@ -238,4 +238,4 @@ INPUT.qq-edit-filename.qq-editing {
 .qq-uploader DIALOG::backdrop {
     background-color: rgba(0, 0, 0, 0.7);
 }
-/*! 2016-04-11 */
+/*! 2016-06-16 */
