Remove all HTML comments in JavaScript before initializing FineUploader. Also copy the icons from Contao bundle to the extension to avoid Contao 4/5 version difference build problem.

--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -142,7 +142,7 @@
     padding-left: 22px;
     line-height: 19px;
     list-style-type: none;
-    background: url("/vendor/contao/core-bundle/src/Resources/contao/themes/flexible/icons/loading.svg") no-repeat left 2px;
+    background: url("loading.svg") no-repeat left 2px;
     background-size: auto 15px;
 }
 
@@ -151,11 +151,11 @@
 }
 
 .fineuploader-wrapper .qq-upload-list li.qq-upload-success {
-    background-image: url("/vendor/contao/core-bundle/src/Resources/contao/themes/flexible/icons/ok.svg");
+    background-image: url("ok.svg");
     color: #589b0e;
 }
 
 .fineuploader-wrapper .qq-upload-list li.qq-upload-fail {
-    background-image: url("/vendor/contao/core-bundle/src/Resources/contao/themes/flexible/icons/delete.svg");
+    background-image: url("delete.svg");
     color: #c33;
 }
